--- a/ConnecTING-CTING/Base.lproj/LaunchScreen.storyboard
+++ b/ConnecTING-CTING/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -16,13 +17,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q9R-kf-igw" userLabel="LOGO">
-                                <rect key="frame" x="37" y="114" width="334" height="545"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CTing_Logo_1920" translatesAutoresizingMaskIntoConstraints="NO" id="Q9R-kf-igw" userLabel="LOGO">
+                                <rect key="frame" x="40" y="147" width="334" height="545"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Q9R-kf-igw" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="YL5-oo-I31"/>
+                            <constraint firstItem="Q9R-kf-igw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="103" id="mx8-VM-m7c"/>
+                            <constraint firstItem="Q9R-kf-igw" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.608259" id="opw-ga-IgO"/>
+                            <constraint firstItem="Q9R-kf-igw" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.806763" id="we0-F9-QGK"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -31,6 +37,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="CTing_Logo_1920" width="1920" height="1920"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
